updated the nav bar and links in the tiles. Also got some basic work done on the side pages.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header>
 	<div id="head">
 		<a href="index.html">Home</a>
-		<a href="index.html">Home</a>
-		<a href="index.html">Home</a>	
+		<a href="stuff.html">About</a>
+		<a href="projects.html">Projects</a>	
 	</div>
 </header>
 	
@@ -31,12 +31,12 @@
 	 </div>
 <div class="columnLayout">
 	<div class="tile clearfix">
-    <img src="./img/thecolonel.jpg" alt="Its me">
+    <img src="./img/thecolonel.jpg" alt="statue of colonel sanders on a bench with me">
 	<h2>Who am I?</h2>
 		  <p>I grew up in Miami, Florida and have my brothers to thank for driving my love of art. They built models, painted murals and were cool enough to include me on the projects. After graduation I started work in the IT field and manage to mix work with my hobbies when possible.
 		  </p>
 	<div>
-		<a href="who.html">Click here for more</a>
+		<a href="stuff.html">About me</a>
 		</div>
 	</div>	
 
@@ -46,7 +46,7 @@
 		  <p>The short answer is just having fun and try to put my ideas to good use. Initially I thought it would be cool to design shirts and posters for friends and family but that wasn’t really a sustainable hobby. Through some chance meetings I was introduced to sculpting and how it can be used to design custom figures. So as usual I took up the challenge and picked up the basic tools to give it a shot.
 		  </p>
 		<div>
-		<a href="stuff.html">Click here for more</a>
+		<a href="projects.html">Projects worked on</a>
 		</div>
 	 </div>
 </div> <!--	End of columnLayout  -->
