updated links and started projects.html layout

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 	<div class="tile clearfix">
 		<img src="img/desk.jpg" alt="Sculpting tools layed out">
 	<h2>What I do</h2>
-		  <p>The short answer is just having fun and try to put my ideas to good use. Initially I thought it would be cool to design shirts and posters for friends and family but that wasn’t really a sustainable hobby. Through some chance meetings I was introduced to sculpting and how it can be used to design custom figures. So as usual I took up the challenge and picked up the basic tools to give it a shot.
+		  <p>The short answer is just having fun and try to put my ideas to good use. From silly shirt designs to custom figures I will try anything once. Follow the link below for  few examples. Nothing was commissioned just random ideas I wanted to try.
 		  </p>
 		<div>
-		<a href="projects.html">Projects worked on</a>
+		<a href="projects.html">Projects</a>
 		</div>
 	 </div>
 </div> <!--	End of columnLayout  -->
