--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,11 @@
 	<div class="subjectCard clearfix">
 		
 	<h1>Projects I worked on</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<p>Over the past few years I've dabbled in different art mediums and all for fun. I started with sketch and over time decided that it would be awesome to actually have a figure of the characters I drew. So I tried sculpting in clay but just didnt feel comfortable nd finally found a wax/clay hybrid called Castilene wax. No need for an armature and can hold incredible detail.
 		</p> 
+		<p>
+			Below are links to my Facebook albums for a few projects.
+		</p>
 	 </div>
 	</div>
 </main>
