updated projects to link to gallery. added details to readme for location of JS

--- a/projects.html
+++ b/projects.html
@@ -23,12 +23,17 @@
 <div class="Container">
 	<div class="subjectCard clearfix">
 		
-	<h1>Projects I worked on</h1>
-		<p>Over the past few years I've dabbled in different art mediums and all for fun. I started with sketch and over time decided that it would be awesome to actually have a figure of the characters I drew. So I tried sculpting in clay but just didnt feel comfortable nd finally found a wax/clay hybrid called Castilene wax. No need for an armature and can hold incredible detail.
+	<h1>Projects I've worked on</h1>
+		<p>Over the past few years I've dabbled in different art mediums and all for fun. I started with sketch and over time decided that it would be awesome to actually have a figure of the characters I drew. So I tried sculpting in clay but just didnt feel comfortable and finally found a wax/clay hybrid called Castilene. No need for an armature and can hold incredible detail.
 		</p> 
 		<p>
-			Below are links to my Facebook albums for a few projects.
+			Below are links to albums for a few projects.
 		</p>
+			<div class="galleryLinks">
+					<a href="http://s1319.photobucket.com/user/chrisdomena/Monkey%20King/story" target="_blank"><img src="./img/monkey.png" alt="face of the monkey king" width="80" height="80" />Monkey King</a> <br>
+					<a href="http://s1319.photobucket.com/user/chrisdomena/Jetpack%20Panda/story" target="_blank"><img src="./img/panda.png" alt="panda eyes" width="80" height="80" />Jetpack Panda</a> <br>
+					<a href="http://s1319.photobucket.com/user/chrisdomena/Fish%20bear/story" target="_blank"><img src="./img/fish.png" alt="smiling fish" width="80" height="80" />Fish bear</a>
+			</div>
 	 </div>
 	</div>
 </main>
