--- a/stuff.html
+++ b/stuff.html
@@ -25,9 +25,18 @@
 		<img class="selfie" src="./img/logo-white.svg" alt="Its me">
 	<h1>More about me</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p> 
+		</p> <br>
+		<p>Alot of times having so many ideas and challenges can be overwhelming. So it's nice to shake the magic 8-ball to get an answer. Got one coded for you in <strong>Javascript</strong> to save a trip to the toy store.
+		</p>
+<!--added div container for JS interaction	-->
+		<div class="js8Ball">
+		<p ID="fortune">Focus on your question</p>
+		</div>
+		<button ID="shake">Ask your question</button>
 	 </div>
 	</div>
+<!-- Inserting link to javascript file	-->
+	<script type="text/javascript" src="./js/app.js"></script>
 </main>
 
 <footer>
