--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Final Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+<!-- adding normailize.css to reset browser default stylesheets. Helps with cross browser compatibility	-->
   <link href="./css/normalize.css" rel="stylesheet" type="text/css">
   <link href="./css/style.css" rel="stylesheet" type="text/css">
 <!--/*adding a font from the google repository */-->
@@ -39,7 +40,7 @@
 		<a href="stuff.html">About me</a>
 		</div>
 	</div>	
-
+<!--	seperated each section with a div so i could set styling more efficiently -->
 	<div class="tile clearfix">
 		<img src="img/desk.jpg" alt="Sculpting tools layed out">
 	<h2>What I do</h2>
